<resources>
    <string name="app_name">iMedJelly</string>
    <string name="DevPrefix">https://app.bahiasoftware.es</string>
    <string name="ProdPrefix">http://medjelly.com</string>
    <string name="ServerUsername">medusas</string>
    <string name="ServerPassword"></string>
    <string name="action_zone">Select zone</string>
    <string name="action_jellyfish">Select jellyfish</string>
    <string-array name="navigation_options">
        <item>Map</item>
        <item>Prediction</item>
        <item>Zones</item>
        <item>Jelly Fishes</item>
        <item>Treatment</item>
        <item>About</item>
        <item>Community</item>
    </string-array>
    <string name="geo_zone">Zones</string>
    <string name="geo_municipality">Municipalities</string>
    <string name="geo_beach">Beaches</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="map_safe">Safe</string>
    <string name="map_alert">Alert</string>
    <string name="map_danger">Danger</string>
    <string name="map_nodata">No Data</string>
    <string name="SplashDescription">Splash</string>
    <string name="production_maps_api_key"></string>
    <string name="development_maps_api_key"></string>
    <string name="title_main">iMedJelly</string>
    <string name="title_map">Map</string>
    <string name="title_beach">Beach</string>
    <string name="title_jellyfish">Jelly Fish</string>
    <string name="title_treatment">Treatment</string>
    <string name="title_comment">Comment</string>
    <string name="title_services">Services</string>
    <string name="title_state">State</string>
    <string name="title_camera_upload">Upload photo</string>
    <string name="select_zone">Select zone</string>
    <string name="select_jellyfish">Select jellyfish</string>
    <string name="service_legend">Legend</string>
    <string name="state_legend">Legend</string>
    <string name="notification_title">Notification</string>
    <string name="community_url">http://medjelly.com/community</string>
    <string name="map_view_label">Beaches Map View</string>
    <string name="beaches_view_label">Beaches View</string>
    <string name="jellyfishes_view_label">JellyFishes View</string>
    <string name="treatment_view_label">Treatment View</string>
    <string name="about_view_label">About View</string>
    <string name="community_view_label">Community View</string>
    <string name="grid_image_desc">Jelly Fish</string>
    <string name="beachName">Beach Name</string>
    <string name="jellyfishPresence">Still not verified</string>
    <string name="beachDescription">Description</string>
    <string name="beachRatingLabel">User rating</string>
    <string name="beachTemperature">" ºC"</string>
    <string name="beachInfoTime">12:10</string>
    <string name="separator">" / "</string>
    <string name="beachMinTemp">17</string>
    <string name="beachMaxTemp">25</string>
    <string name="beachWindSpeed">10</string>
    <string name="beachMaxUV">8 UV</string>
    <string name="jellyfish_no_info">No info available</string>
    <string name="no_warning">No jellyfishes observed</string>
    <string name="low_warning">Jellyfishes without danger</string>
    <string name="high_warning">Danger of jellyfishes</string>
    <string name="very_high_warning">High danger of jellyfishes</string>
    <string name="flag">No info available</string>
    <string name="green_flag">Proper conditions for bath</string>
    <string name="yellow_flag">Caution unfavourable conditions for bath</string>
    <string name="red_flag">Bath forbidden, beach closed</string>
    <string name="termometer">Termometer</string>
    <string name="beachBackground">Beach</string>
	<string name="bikeParking">Bike parking</string>
	<string name="blueFlag">Blue flag</string>
	<string name="childrenZone">Children zone</string>
	<string name="dump">Dump</string>
	<string name="handicappedAccess">Handicapped access</string>
    <string name="handicappedFriendly">Handicapped friendly</string>
    <string name="parking">Parking</string>
    <string name="rentUmbrellaHammock">Umbrella and hammock rent</string>
    <string name="restaurant">Restaurant</string>
    <string name="shower">Shower</string>
    <string name="slogans">Slogans</string>
    <string name="sportZone">Sport zone</string>
    <string name="surveillanceTower">Surveillance tower</string>
    <string name="waterSource">Water source</string>
    <string name="wc">WC</string>
    <string name="sky">Sky</string>
    <string name="windDirection">Wind direction</string>
    <string name="noSelected">No selected</string>
    <string name="beach_add_comment">Add comment</string>
    <string name="treatment_image">Image</string>
    <string name="treatment_title">Jellyfish stings: what you need to do</string>
    <string name="treatment_description" >Jellyfish are invertebrates that float in the sea. They have stinging cells to capture prey and defend themselves. In recent years the frequency of jellyfish blooms has sharply increased.</string>
    <string name="observation_title">Observations</string>
    <string name="feedback_success">Feedback sent successfully.</string>
    <string name="feedback_failed">Feedback failed: </string>
    <string name="feedback_username">Username</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_comment">Comments</string>
    <string name="feedback_send">Send</string>
    <string name="newuser_success">User created successfully.</string>
    <string name="newuser_failed">Registration failed: </string>
	<string name="newuser_title">New user</string>
	<string name="newuser_description">Joining the MedJelly user community you will have access to the forum and polls to share information will other users.</string>
    <string name="newuser_username">Username</string>
    <string name="newuser_email">Email</string>
    <string name="newuser_password">Password</string>
    <string name="newuser_join">Sign in</string>
    <string name="newuser_alreadyregistered"><u>Already registered</u></string>
    <string name="observation_success">Observation sent successfully.</string>
    <string name="observation_failed">Observation failed: </string>
    <string name="observation_text">You can send images and information about jellyfishes found in beach.</string>
    <string name="observation_jellyFishName">Jellyfish</string>
    <string name="observation_comment">Comments</string>
    <string name="observation_send">Send</string>
    <string name="image_upload">Upload image</string>
    <string name="about_title">About</string>
    <string name="about_authors">Application developed and maintaned by:</string>
    <string name="developers_logo">Developers</string>
	<string name="about_team">MedJelly work team:</string>
	<string name="about_team_members">Paulo A.L.D. Nunes\nVerónica Fuentes\nMacarena Marambio\nIvar Rekve\nScience O\'Matic</string>
    <string name="about_colaboration">With the colaboration:</string>
	<string name="about_colaborators">Cruz Roja\nRescatadores\nPro-Activa\nMarsave-Mallorca\nSIRESA\nAltsport 2000\nMunicipalities of the Catalan coast\nAEMET\nGIEM\nCatalan Agency of Water\nCivil protection (Generalitat de Catalunya)\n</string>
	<string name="about_financed">Project co-financed:</string>
	<string name="about_financers">Project co-financers:</string>
	<string name="about_description">The dangerousness for each beach(color ot the pin for each beach on the main screen of this app) is obtained from an index that the experts of the Institute of Marine Sciences of Barcelona (CSIC) have developed and considered together, thedangerousness of each jellyfish species and the abundance of it in the water. In the case of presence of jellyfish on a beach, three different categories can ocurr:\n- Presence of jellyfish, safely (green pin)\n- Presence of jellyfish, with danger (yellow pin)\n- Presence of jellyfish, high risk (red pin)\n\nAll information jellyfish is validated daily by experts from the Institute of Marine Sciences in the frame of the European project ENPI MED-JELLYRISK. An important part of the information about jellyfish on beaches is obtained by coastal municipalities and by the collaboration with the Catalan Water Agency and Civil Protection of the Generalitat of Catalonia. In turn all the information received by the researchers of the Institute of Marine Sciences is part of a large database that attempts to explain the phenomenon of jellyfish proliferations, it causes and consequences.\n\nDisclaimer Medjelly App\nThe data regarding the presence or absence of jellyfish in the beaches is delivered by the Rescue Services or by personnel of the different municipalities, in the frame of the established cooperation with the Institute of Marine Science (CSIC), and with the aim to inform about the jellyfish presence, the risk and the action protocols. However, this information may be variable along the day, because jellyfish are animals that move together with the water mass and may be dispersed by the currents and winds from one place to another, moving them closer or further to the coast in brief periods of time. For this reason, the Medjelly app publishes the information according to the state of the beach in the morning, but with the possibility that this state changes along the day. The application will update the information whenever it is possible, and when those changes and new information is received.\n\nThe predictions of this model indicate the probability of apearence in high abundances for jellyfish species Pelagia noctiluca in the beaches of catalan coast.\nThe database based on the presence / absence of jellyfish and associated environmental variables, collects sightings from 1994 to the present and has constructed a model of distribution of the species of interest. Pelagia noctiluca is an oceanic jellyfish which approaches to the Catalan coast produce over 90% of incidents by jellyfish stings on beaches. This has been the species chosen to test the predictive models produced under the Med-Jellyrisk project.\nThe prediction model is based on future environmental conditions. This model calibrates jellyfish proliferations with environmental parameters that happen during the bloom. After adjusting this model, it can predict (with an uncertainty) the probability of a bloom of the species, only looking at the environmental variables.\nTherefore, predictions in future depend only on future environmental conditions and predictions of 24 h and 48 h are done running the prediction model on environmental variables and forecast for 24 and 48 h.\nPredictive models are a result of the project that responds to a demand by users and institutions about the existence of such management tools on bathing areas.</string>
	<string name="about_phone_number">900 102 289</string>
	<string name="about_more_information">For more information about jellyfishes, please contact with us on this free phone number:</string>
	<string-array name="jellyfish_arrays">
        <item>Pelagia noctiluca</item>
    	<item>Rhizostoma pulmo</item>
    	<item>Aequorea forskalea</item>
    	<item>Cotylorhiza tuberculata</item>
    	<item>Velella velella</item>
    	<item>Aurelia aurita</item>
    	<item>Chrysaora hysoscella</item>
    	<item>Porpita porpita</item>
    	<item>Carybdea marsupialis</item>
    	<item>Physalia physalis</item>
    	<item>Olindias phosphorica</item>
    	<item>Mnemiopsis leidyi</item>
    	<item>Phyllorhiza punctata</item>
    	<item>Cassiopea andromeda</item>
    	<item>Salpa democratica</item>
    </string-array>
    <string name="nj1a" >Pelagia noctiluca</string>
    <string name="nj1b" >Rhizostoma pulmo</string>
    <string name="nj2a" >Aequorea forskalea</string>
    <string name="nj2b" >Cotylorhiza tuberculata</string>
    <string name="nj3a" >Velella velella</string>
    <string name="nj3b" >Aurelia aurita</string>
</resources>