<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">

	<ImageView
    	android:layout_width="383dp"
        android:layout_height="115dp"
        android:id="@+id/treatment_image"
        android:contentDescription="@string/treatment_image"
        android:scaleType="fitXY"
        android:src="@drawable/title" />

  	<TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/treatment_title"
        android:background="#FCD9B9"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/treatment_title" />

  	<View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="5dp"/>
  	
  	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/treatment_description"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#DDDDDD"
        android:id="@+id/treatment_description" />

</LinearLayout>
